@@ -91,14 +91,14 @@ module ActiveScaffold::Actions
             raise ActiveRecord::Rollback, "don't save habtm associations unless record is valid"
           end
         end
-      rescue ActiveRecord::RecordInvalid
-        flash[:error] = $!.message
-        self.successful = false
       rescue ActiveRecord::StaleObjectError
         @record.errors.add(:base, as_(:version_inconsistency))
         self.successful = false
       rescue ActiveRecord::RecordNotSaved
         @record.errors.add(:base, as_(:record_not_saved)) if @record.errors.empty?
+        self.successful = false
+      rescue ActiveRecord::ActiveRecordError => ex
+        flash[:error] = ex.message
         self.successful = false
       end
     end
